--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1524,6 +1524,19 @@
   timestamp = {2022.08.11},
 }
 
+@Article{Anderson1988,
+  author    = {Anderson, R. C. and Wilson, P. T. and Fielding, L. G.},
+  title     = {Growth in reading and how children spend their time outside of school},
+  journal   = {Reading Research Quarterly},
+  year      = {1988},
+  volume    = {23},
+  number    = {3},
+  pages     = {285-303},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
+  url       = {https://www.jstor.org/stable/748043},
+}
+
 @PhdThesis{Anderson1999,
   author    = {Anderson, C. E.},
   title     = {Formation and Resolution of Ideological Contrast in the Early History of Scandinavia},
@@ -2700,6 +2713,17 @@
   doi       = {10.1287/opre.28.5.1130},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@InProceedings{Balasubramanian2013,
+  author    = {Balasubramanian, N. and Soderland, S. and {Mausam} and Etzioni, O.},
+  title     = {Generating Coherent Event Schemas at Scale},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2013},
+  pages     = {1721-1731},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
+  url       = {https://aclanthology.org/D13-1178/},
 }
 
 @Book{Baldick2008,
@@ -8262,6 +8286,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.08.20},
 }
 
+@Book{Chall2009,
+  title     = {The Reading Crisis},
+  publisher = {Harvard University Press},
+  year      = {2009},
+  author    = {Chall, J. S. and Jacobs, V. A. and Baldwin, L. E.},
+  doi       = {10.2307/j.ctvjhzs0b},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
+}
+
 @Book{Chambers1959,
   title     = {Beowulf: An Introduction},
   publisher = {Cambridge University press},
@@ -9601,6 +9635,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2021.09.21},
 }
 
+@InProceedings{Clark2016,
+  author    = {Clark, K. and Manning, C. D.},
+  title     = {Improving Coreference Resolution by Learning Entity-Level Distributed Representations},
+  booktitle = {54th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2016},
+  pages     = {643-653},
+  doi       = {10.18653/v1/p16-1061},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
+}
+
 @InProceedings{Clark2018,
   author    = {Clark, E. and Spencer Ross, A. and Tan, C. and Ji, Y. and Smith, N. A.},
   title     = {Creative Writing with a Machine in the Loop},
@@ -10834,6 +10879,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://gate.ac.uk/sale/acl02/acl-main.pdf},
+}
+
+@Article{Cunningham2006,
+  author    = {Cunningham, P. M.},
+  title     = {High-Poverty Schools That Beat the Odds},
+  journal   = {Reading Teacher},
+  year      = {2006},
+  volume    = {60},
+  number    = {4},
+  pages     = {382-385},
+  doi       = {10.1598/rt.60.4.9},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
 }
 
 @Book{Curley2009,
@@ -15230,6 +15288,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://books.google.fr/books?id=MNZIkw4E4NIC},
 }
 
+@TechReport{Fernandez2015,
+  author      = {Fernandez, M. and Peterson, M. and Ulmer, B.},
+  title       = {Extracting social network from literature to predict antagonist and protagonist},
+  institution = {Stanford University},
+  year        = {2015},
+  owner       = {Vincent},
+  timestamp   = {2023.01.09},
+  url         = {https://nlp.stanford.edu/courses/cs224n/2015/reports/14.pdf},
+}
+
 @Article{Ferrara1974,
   author    = {Ferrara, F.},
   title     = {Theory and Model for the Structural Analysis of Fiction},
@@ -19158,6 +19226,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.06.29},
 }
 
+@InProceedings{Groza2015,
+  author    = {Groza, A. and Corde, L.},
+  title     = {Information retrieval in falktales using natural language processing},
+  booktitle = {IEEE International Conference on Intelligent Computer Communication and Processing},
+  year      = {2015},
+  pages     = {59-66},
+  doi       = {10.1109/iccp.2015.7312606},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
+}
+
 @InProceedings{Gruber2007,
   author    = {Gruber, A. and Weiss, Y. and Rosen-Zvi, M.},
   title     = {Hidden Topic Markov Models},
@@ -21416,6 +21495,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/08997764.2018.1452746},
   owner     = {Vincent},
   timestamp = {2022.08.31},
+}
+
+@InProceedings{Hogenboom2011,
+  author    = {Hogenboom, F. and Frasincar, F. and Kaymak, U. and de Jong, F.},
+  title     = {An Overview of Event Extraction from Text},
+  booktitle = {Detection, Representation, and Exploitation of Events in the Semantic Web},
+  year      = {2011},
+  volume    = {779},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {48-57},
+  owner     = {Vincent},
+  timestamp = {2015.03.16},
+  url       = {http://ceur-ws.org/Vol-779/},
 }
 
 @InCollection{Hogg2012,
@@ -29265,6 +29357,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.09.20},
 }
 
+@InProceedings{Li2019b,
+  author    = {Li, D. and Huang, L. and Ji, H. and Han, J.},
+  title     = {Biomedical Event Extraction based on Knowledge-driven Tree},
+  booktitle = {Conference of the North American Chapter of the Association for Computational Linguistics},
+  year      = {2019},
+  pages     = {1421-1430},
+  doi       = {10.18653/v1/n19-1145},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
+}
+
 @InProceedings{Li2019o,
   author    = {Li, J. and Zhang, C. and Tan, H. and Li, C.},
   title     = {Complex Networks of Characters in Fictional Novels},
@@ -33230,6 +33333,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.11.30},
 }
 
+@InProceedings{Metilli2019,
+  author    = {Metilli, D. and Bartalesi, V. and Meghini, C.},
+  title     = {Steps towards a system to extract formal narratives from text},
+  booktitle = {2nd Workshop on Narrative Extraction From Texts},
+  year      = {2019},
+  volume    = {2342},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {53-61},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
+  url       = {https://ceur-ws.org/Vol-2342/paper7.pdf},
+}
+
 @InProceedings{Metrailler2022,
   author    = {Métrailler , C.},
   title     = {Narrative flow: a formal approach of character network generation for non-linear narratives},
@@ -35635,6 +35751,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1556/jcep.3.2005.1.3},
   owner     = {Vincent},
   timestamp = {2020.03.17},
+}
+
+@Article{Neuman2006,
+  author    = {Neuman, S. B. and Celano, D.},
+  title     = {The knowledge gap: Implications of leveling the playing field for low-income and middle-income children},
+  journal   = {Reading Research Quarterly},
+  year      = {2006},
+  volume    = {41},
+  number    = {2},
+  pages     = {176-201},
+  doi       = {10.1598/rrq.41.2.2},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
 }
 
 @Book{Newcomb1961,
@@ -39625,6 +39754,31 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://aclanthology.info/papers/L10-1450/l10-1450},
 }
 
+@Article{Quaresma2019,
+  author    = {Quaresma, P. and Beires Nogueira, V. and Raiyani, K. and Bayot, R.},
+  title     = {Event Extraction and Representation: A Case Study for the Portuguese Language},
+  journal   = {Information},
+  year      = {2019},
+  volume    = {10},
+  number    = {6},
+  pages     = {205},
+  doi       = {10.3390/info10060205},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
+}
+
+@InProceedings{Quaresma2020,
+  author    = {Quaresma, P. and Finatto, M. J. B.},
+  title     = {Information extraction from historical texts: a case study},
+  booktitle = {Digital Humanities and Natural Language Processing},
+  year      = {2020},
+  volume    = {2607},
+  pages     = {49-56},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
+  url       = {https://ceur-ws.org/Vol-2607/short2.pdf},
+}
+
 @Article{Quart2005,
   author    = {Quart, A.},
   title     = {Review: Spanglish},
@@ -40755,7 +40909,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2016},
   owner     = {Vincent},
   timestamp = {2016.02.20},
-  url       = {https://www.researchgate.net/profile/Sandro_Pinto/publication/286449748_The_complex_social_network_from_The_Lord_of_The_Rings/links/5669dfbe08ae62b05f026df9.pdf},
+  url       = {https://arxiv.org/abs/1606.02610},
 }
 
 @InProceedings{Ribler2000,
@@ -45966,6 +46120,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1521/jscp.23.6.857.54803},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Sprugnoli2019,
+  author    = {Sprugnoli, R. and Tonelli, S.},
+  title     = {Novel Event Detection and Classification for Historical Texts},
+  journal   = {Computational Linguistics},
+  year      = {2019},
+  volume    = {45},
+  number    = {2},
+  pages     = {229-265},
+  doi       = {10.1162/coli_a_00347},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
 }
 
 @Article{Srinivasan2022,
@@ -52121,6 +52288,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.12},
 }
 
+@Article{Wu2018,
+  author    = {Wu, J. and Guo, S. and Huang, H. and Liu, W. and Xiang, Y.},
+  title     = {Information and Communications Technologies for Sustainable Development Goals: State-of-the-Art, Needs and Perspectives},
+  journal   = {IEEE Communications Surveys \& Tutorials},
+  year      = {2018},
+  volume    = {20},
+  number    = {3},
+  pages     = {2389-2406},
+  doi       = {10.1109/comst.2018.2812301},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
+}
+
 @InProceedings{Xanthos2014,
   author    = {Xanthos, A.},
   title     = {Textable: programmation visuelle pour l'analyse de données textuelles},
@@ -52164,6 +52344,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1772690.1772790},
   owner     = {Vincent},
   timestamp = {2011.07.19},
+}
+
+@Article{Xiang2019,
+  author    = {Xiang, W. and Wang, B.},
+  title     = {A Survey of Event Extraction From Text},
+  journal   = {IEEE Access},
+  year      = {2019},
+  volume    = {7},
+  pages     = {173111-173137},
+  doi       = {10.1109/access.2019.2956831},
+  owner     = {Vincent},
+  timestamp = {2021.09.19},
 }
 
 @InProceedings{Xiao2010,
@@ -53512,6 +53704,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.02.04},
 }
 
+@InProceedings{Zeng2016a,
+  author    = {Zeng, Y. and Yang, H. and Feng, Y. and Wang, Z. and Zhao, D.},
+  title     = {A Convolution {BiLSTM} Neural Network Model for Chinese Event Extraction},
+  booktitle = {Natural Language Understanding and Intelligent Applications},
+  year      = {2016},
+  pages     = {275-287},
+  doi       = {10.1007/978-3-319-50496-4_23},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
+}
+
 @InProceedings{Zeng2019b,
   author    = {Zeng, Y.},
   title     = {Prediction of Film Score: Based on Character Relations},
@@ -53880,6 +54083,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.48550/arXiv.2203.13281},
   owner     = {Vincent},
   timestamp = {2022.04.02},
+}
+
+@InProceedings{Zhang2022at,
+  author    = {Zhang, X. and Li, W. and Bai, Q. and Liu, W. and Wang, H.},
+  title     = {A Novel Story Plots Extraction Based Rapid Reading Comprehension System to Assist the Education for Low-income Families},
+  booktitle = {32nd International Telecommunication Networks and Applications Conference},
+  year      = {2022},
+  pages     = {127-132},
+  doi       = {10.1109/itnac55475.2022.9998397},
+  owner     = {Vincent},
+  timestamp = {2023.01.09},
 }
 
 @Article{Zhao2003,
