--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -8133,6 +8133,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.21.3248},
 }
 
+@InCollection{Cazabet2017a,
+  author        = {Cazabet, R. and Rossetti, G. and Amblard, F.},
+  title         = {Dynamic Community Detection},
+  booktitle     = {Encyclopedia of Social Network Analysis and Mining},
+  year          = {2017},
+  __markedentry = {[Vincent:]},
+  owner         = {Vincent},
+  timestamp     = {2017.08.05},
+  url           = {https://www.researchgate.net/profile/Remy_Cazabet/publication/318165883_Dynamic_Community_Detection/links/5964c1400f7e9bfb63cb830d/Dynamic-Community-Detection.pdf},
+}
+
 @InProceedings{Celikyilmaz2010,
   author    = {Celikyilmaz, A. and Hakkani-Tur, D. and He, H. and Kondrak, G. and Barbosa, D.},
   title     = {The Actor-Topic Model for Extracting Social Networks in Literary Narrative},
@@ -41623,6 +41634,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2017.12.05},
 }
 
+@InProceedings{Rodda2023,
+  author    = {Rodda, I. and Bhavani, D.},
+  title     = {Visualization of the Dynamics in Character Networks using Social Network Analysis},
+  booktitle = {6th Joint International Conference on Data Science \& Management of Data},
+  year      = {2023},
+  pages     = {284-285},
+  doi       = {10.1145/3570991.3571019},
+  owner     = {Vincent},
+  timestamp = {2023.01.11},
+}
+
 @InProceedings{Rodin2016,
   author    = {Rodin, I. and Chernyak, E. and Dubov, M. and Mirkin, B.},
   title     = {Visualization of Dynamic Reference Graphs},
@@ -41968,6 +41990,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1073/pnas.0706851105},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Article{Rosvall2010,
+  author    = {Rosvall, M. and Bergstrom, C. T.},
+  title     = {Mapping change in large networks},
+  journal   = {PLoS ONE},
+  year      = {2010},
+  volume    = {5},
+  pages     = {e8694},
+  doi       = {10.1371/journal.pone.0008694},
+  owner     = {Vincent},
+  timestamp = {2010.08.13},
 }
 
 @Article{Roth1999,
@@ -42993,6 +43027,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/00988157.1974.9977130},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Article{Santana2023,
+  author    = {Santana, B. and Campos, R. and Amorim, E. and Jorge, A. and Silvano, P. and Nunes, S.},
+  title     = {A survey on narrative extraction from textual data},
+  journal   = {Artificial Intelligence Review},
+  year      = {2023},
+  volume    = {in press},
+  doi       = {10.1007/s10462-022-10338-7},
+  owner     = {Vincent},
+  timestamp = {2023.01.10},
 }
 
 @InCollection{Santayana1968,
@@ -52774,6 +52819,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1209/0295-5075/100/58002},
   owner     = {Vincent},
   timestamp = {2019.04.02},
+}
+
+@Article{Yang2011h,
+  author    = {Yang, T. and Chi, Y. and Zhu, S. and Gong, Y. and Jin, R.},
+  title     = {Detecting communities and their evolutions in dynamic social networks-a Bayesian approach},
+  journal   = {Machine Learning},
+  year      = {2011},
+  volume    = {82},
+  number    = {2},
+  pages     = {157-189},
+  doi       = {10.1007/s10994-010-5214-7},
+  owner     = {Vincent},
+  timestamp = {2012.08.19},
 }
 
 @InProceedings{Yang2012,
