--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -11209,12 +11209,12 @@ arXiv: https://arxiv.org/abs/1709.07604},
 
 @InProceedings{Danilova2021,
   author    = {Danilova, A. and Tarasevich, Y. Y.},
-  title     = {Network analysis of the novel The Master and Margarita by M.A.Bulgakov},
+  title     = {Network analysis of the novel The Master and Margarita by M. A. Bulgakov},
   booktitle = {34th Marian Smoluchowski Symposium on Statistical Physics},
   year      = {2021},
   owner     = {Vincent},
   timestamp = {2021.12.11},
-  url       = {https://arxiv.org/abs/2112.02820},
+  url       = {https://zakopane.if.uj.edu.pl/event/17/contributions/457/contribution.pdf},
 }
 
 @InProceedings{Danisman2008,
@@ -11638,6 +11638,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1016/j.physa.2004.06.025},
   owner     = {Vincent},
   timestamp = {2019.04.01},
+}
+
+@Article{Dekker2018,
+  author    = {Dekker, J. T. and Dekker, A. H.},
+  title     = {Centrality in the Book of Ruth},
+  journal   = {Vetus Testamentum},
+  year      = {2018},
+  volume    = {68},
+  number    = {1},
+  pages     = {41-50},
+  owner     = {Vincent},
+  timestamp = {2023.01.13},
+  url       = {https://www.jstor.org/stable/26566804},
 }
 
 @Article{Dekker2019,
@@ -40577,6 +40590,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.crcpress.com/Digital-Image-Sequence-Processing-Compression-and-Analysis/Reed/p/book/9780849315268},
 }
 
+@InCollection{Regan2009,
+  author    = {Regan, E. R.},
+  title     = {Networks: Structure and Dynamics},
+  booktitle = {Encyclopedia of Complexity and Systems Science},
+  publisher = {Springer},
+  year      = {2009},
+  pages     = {6048-6066},
+  doi       = {10.1007/978-0-387-30440-3_356},
+  owner     = {Vincent},
+  timestamp = {2023.01.13},
+}
+
 @InProceedings{Rehurek2010,
   author    = {Rehurek, R. and Sojka, P.},
   title     = {Software Framework for Topic Modelling with Large Corpora},
@@ -47793,6 +47818,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/SITIS.2016.60},
   owner     = {Vincent},
   timestamp = {2019.07.03},
+}
+
+@Article{Tarasevich2022,
+  author    = {Tarasevich, Y. Y. and Danilova, A. V. and Romanovskaya, O. E.},
+  title     = {Structure of social relations in the novel The Master and Margarita by M. A. Bulgakov: A network analysis of verbal communications},
+  journal   = {arXiv},
+  year      = {2022},
+  volume    = {physics.soc-ph},
+  pages     = {2112.02820},
+  owner     = {Vincent},
+  timestamp = {2023.01.13},
+  url       = {https://arxiv.org/abs/2112.02820},
 }
 
 @Article{Tardy1985,
