--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -4250,6 +4250,16 @@
   timestamp = {2021.09.16},
 }
 
+@Book{Berlin1994,
+  title     = {Poetics and Interpretation of Biblical Narrative},
+  publisher = {Eisenbrauns},
+  year      = {1994},
+  author    = {Berlin, A.},
+  owner     = {Vincent},
+  timestamp = {2023.01.14},
+  url       = {https://books.google.fr/books/?id=eLoBhPENIBQC},
+}
+
 @Article{Bernard1988,
   author    = {Bernard, H. R. and Killworth, P. D. and Evans, M. J. and McCarty, C. and Shelley, G. A.},
   title     = {Studying Social Relations Cross-Culturally},
@@ -6043,6 +6053,19 @@
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {http://www.gutenberg.org/ebooks/36773},
+}
+
+@Article{Brady2013,
+  author    = {Brady, C. M. M.},
+  title     = {The Conversion of Ruth in Targum Ruth},
+  journal   = {Review of Rabbinic Judaism},
+  year      = {2013},
+  volume    = {16},
+  number    = {2},
+  pages     = {133-146},
+  doi       = {10.1163/15700704-12341252},
+  owner     = {Vincent},
+  timestamp = {2023.01.14},
 }
 
 @Article{Brady2017,
@@ -11640,6 +11663,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.01},
 }
 
+@Article{Dekker2005,
+  author    = {Dekker, A.},
+  title     = {Conceptual Distance in Social Network Analysis},
+  journal   = {Journal of Social Structure},
+  year      = {2005},
+  volume    = {6},
+  owner     = {Vincent},
+  timestamp = {2020.11.09},
+  url       = {https://www.cmu.edu/joss/content/articles/volume6/dekker/},
+}
+
 @Article{Dekker2018,
   author    = {Dekker, J. T. and Dekker, A. H.},
   title     = {Centrality in the Book of Ruth},
@@ -16183,6 +16217,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://books.google.fr/books?id=63sLAQAAMAAJ},
 }
 
+@Book{Fox2010,
+  title     = {Character and Ideology in the Book of Esther},
+  publisher = {Wipf \& Stock},
+  year      = {2010},
+  author    = {Fox, M. V.},
+  owner     = {Vincent},
+  timestamp = {2023.01.14},
+  url       = {https://books.google.fr/books/?id=spVMAwAAQBAJ},
+}
+
 @Article{Fox2013,
   author    = {Fox, K. C. R. and Nijeboer, S. and Solomonova, E. and Domhoff, G. W. and Christoff, K.},
   title     = {Dreaming as mind wandering: evidence from functional neuroimaging and first-person content reports},
@@ -16655,6 +16699,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1371/journal.pone.0163432},
   owner     = {Vincent},
   timestamp = {2020.11.30},
+}
+
+@Book{Fuerst1975,
+  title     = {The Books of Ruth, Esther, Ecclesiastes, The Song of Songs, Lamentations},
+  publisher = {Cambridge University Press},
+  year      = {1975},
+  author    = {Fuerst, W. J.},
+  series    = {Cambridge Bible Commentary},
+  owner     = {Vincent},
+  timestamp = {2023.01.14},
+  url       = {https://www.cambridge.org/vi/academic/subjects/religion/biblical-studies-old-testament-hebrew-bible/books-ruth-esther-ecclesiastes-song-songs-lamentations-five-scrolls},
 }
 
 @InProceedings{Fujii2011,
@@ -19679,6 +19734,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2017.05.31},
   url       = {http://www.cambridge.org/catalogue/catalogue.asp?isbn=0521273110},
+}
+
+@Article{Hage1995,
+  author    = {Hage, P. and Harary, F.},
+  title     = {Eccentricity and centrality in networks},
+  journal   = {Social Networks},
+  year      = {1995},
+  volume    = {17},
+  number    = {1},
+  pages     = {57-63},
+  doi       = {10.1016/0378-8733(94)00248-9},
+  owner     = {Vincent},
+  timestamp = {2015.05.17},
 }
 
 @InProceedings{Haghighi2009,
@@ -34724,6 +34792,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@Book{Morselli2008,
+  title     = {Inside Criminal Networks},
+  publisher = {Springer},
+  year      = {2008},
+  author    = {Morselli, C.},
+  series    = {Studies of Organized Crime},
+  doi       = {10.1007/978-0-387-09526-4},
+  owner     = {Vincent},
+  timestamp = {2023.01.14},
+}
+
 @Book{Morson1987,
   title     = {Hidden in Plain View: Narrative and Creative Potentials in 'War and Peace'},
   publisher = {Stanford University Press},
@@ -43260,6 +43339,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cvpr.1997.609351},
   owner     = {Vincent},
   timestamp = {2019.03.31},
+}
+
+@Book{Saxegaard2010,
+  title     = {Character Complexity in the Book of Ruth},
+  publisher = {Mohr Siebeck},
+  year      = {2010},
+  author    = {Saxegaard, K. M.},
+  doi       = {10.1628/978-3-16-151145-5},
+  owner     = {Vincent},
+  timestamp = {2023.01.14},
 }
 
 @Article{Sayers1991,
