--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -834,6 +834,18 @@
   timestamp = {2020.12.18},
 }
 
+@Article{Aksoy2020,
+  author    = {Aksoy, S. G. and Joslyn, C. and Ortiz~Marrero, C. and Praggastis, B. and Purvine, E.},
+  title     = {Hypernetwork science via high-order hypergraph walks},
+  journal   = {EPJ Data Science},
+  year      = {2020},
+  volume    = {9},
+  pages     = {16},
+  doi       = {10.1140/epjds/s13688-020-00231-0},
+  owner     = {Vincent},
+  timestamp = {2023.02.25},
+}
+
 @InProceedings{Alayrac2016,
   author    = {Alayrac, J.-B. and Bojanowski, P. and Agrawal, N. and Sivic, J. and Laptev, I. and Lacoste-Julien, S.},
   title     = {Unsupervised Learning from Narrated Instruction Videos},
@@ -2499,6 +2511,18 @@
   timestamp = {2022.07.07},
 }
 
+@Article{Bai2021,
+  author    = {Bai, S. and Zhang, F. and Torr, P. H. S.},
+  title     = {Hypergraph convolution and hypergraph attention},
+  journal   = {Pattern Recognition},
+  year      = {2021},
+  volume    = {110},
+  pages     = {107637},
+  doi       = {10.1016/j.patcog.2020.107637},
+  owner     = {Vincent},
+  timestamp = {2023.02.25},
+}
+
 @Article{Baiesi2004,
   author    = {Baiesi, M. and Paczuski, M.},
   title     = {Scale-free networks of earthquakes and aftershocks},
@@ -3542,6 +3566,19 @@
   timestamp   = {2022.08.31},
 }
 
+@Article{Battiston2021,
+  author    = {Battiston, F. and Amico, E. and Barrat, A. and Bianconi, G. and Ferraz de Arruda, G. and Franceschiello, B. and Iacopini, I. and Kéfi, S. and Latora, V. and Moreno, Y. and Murray, M. M. and Peixoto, T. P. and Vaccarino, F. and Petri, G.},
+  title     = {The physics of higher-order interactions in complex systems},
+  journal   = {Nature Physics},
+  year      = {2021},
+  volume    = {17},
+  number    = {10},
+  pages     = {1093-1098},
+  doi       = {10.1038/s41567-021-01371-4},
+  owner     = {Vincent},
+  timestamp = {2023.02.25},
+}
+
 @Article{Bauer2012,
   author    = {Bauer, F.},
   title     = {Normalized graph Laplacians for directed graphs},
@@ -4152,6 +4189,18 @@
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://books.google.fr/books?id=T_YrAAAAIAAJ},
+}
+
+@Book{Berge1989,
+  title     = {Hypergraphs: Combinatorics of Finite Sets},
+  publisher = {Elsevier},
+  year      = {1989},
+  author    = {Berge, C.},
+  volume    = {45},
+  series    = {North-Holland Mathematical Library},
+  owner     = {Vincent},
+  timestamp = {2023.02.25},
+  url       = {http://compalg.inf.elte.hu/~tony/Oktatas/Algoritmusok-hatekonysaga/Berge-hypergraphs.pdf},
 }
 
 @Article{Berger2021,
@@ -5121,7 +5170,7 @@
 
 @MastersThesis{Bogucki2022,
   author      = {Bogucki, W.},
-  title       = {Analysis of graphs of the interactions between the characters in movies and TV series},
+  title       = {Analysis of graphs of the interactions between the characters in movies and {TV} series},
   year        = {2022},
   type        = {MSc Thesis},
   abstract    = {This Master’s thesis aim is to present a process of creating networks of interactions between characters of films and serials based on transcriptions and analysis of such networks. The paper presents a comparison of community detection methods as well as the use of these methods in plot analysis. A comparative analysis of the interaction network from episodes of four popular series - The Office (American version), Seinfeld, The Big Bang Theory and Friends is also presented. Character networks are compared both in terms of distributions of their metrics and node centrality measures. Moreover, the author considers the hypothesis whether the viewers’ ratings of the series are related to the structure of the character networks of their episodes. Finally, the differences and similarities between the interaction networks in selected movies and series are analyzed, as well as the potential reasons for their occurrence. The author’s contribution includes gathering and discussing currently available data sources containing transcriptions of movies and series and additional information on viewer ratings and viewership. It also includes describing the process of creating a character network from HTML sources. Moreover, it contains extending existing comparisons of community detection methods in character networks and analysis of the relationship between viewer ratings of episodes and the structure of their character networks through the correlation of ratings and networks measures and feature importance in the random forest model. The author also contributes to the character network analysis by presenting a comparison of the network of films and series episodes using the Principal component analysis (PCA).},
@@ -5845,6 +5894,18 @@
   doi       = {10.1109/tvcg.2011.185},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@Article{Botond2023,
+  author    = {Botond, S. and Bence, V.},
+  title     = {Tragic and Comical Networks. Clustering Dramatic Genres According to Structural Properties},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.CL},
+  pages     = {2302.08258},
+  owner     = {Vincent},
+  timestamp = {2023.02.18},
+  url       = {https://arxiv.org/abs/2302.08258},
 }
 
 @Book{Bott1957,
@@ -10563,6 +10624,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.08.18},
   url       = {http://sections.maa.org/florida/proceedings/2002/coulter.pdf},
+}
+
+@Article{Coupette2022,
+  author    = {Coupette, C. and Vreeken, J. and Rieck, B.},
+  title     = {All the World's a (Hyper)Graph: A Data Drama},
+  journal   = {arXiv},
+  year      = {2022},
+  volume    = {cs.LG},
+  pages     = {2206.08225},
+  owner     = {Vincent},
+  timestamp = {2023.01.24},
+  url       = {https://arxiv.org/abs/2206.08225},
 }
 
 @InProceedings{Cour2008,
@@ -17407,6 +17480,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.ucpress.edu/book/9780520084599/mimesis},
 }
 
+@Article{Gebru2021,
+  author    = {Gebru, T. and Morgenstern, J. and Vecchione, B. and Wortman Vaughan, J. and Wallach, H. and Daumé, H. and Crawford, K.},
+  title     = {Datasheets for datasets},
+  journal   = {Communications of the ACM},
+  year      = {2021},
+  volume    = {64},
+  number    = {12},
+  pages     = {86-92},
+  doi       = {10.1145/3458723},
+  owner     = {Vincent},
+  timestamp = {2023.02.25},
+}
+
 @InProceedings{Gehrmann2021,
   author    = {Gehrmann, S. and Adewumi, T. and Aggarwal, K. and Ammanamanchi, P. S. and Aremu, A. and Bosselut, A. and Chandu, K. R. and Clinciu, M.-A. and Das, D. and Dhole, K. and Du, W. and Durmus, E. and Dušek, O. and Chinenye Emezue, C. and Gangal, V. and Garbacea, C. and Hashimoto, T. and Hou, Y. and Jernite, Y. and Jhamtani, H. and Ji, Y. and Jolly, S. and Kale, M. and Kumar, D. and Ladhak, F. and Madaan, A. and Maddela, M. and Mahajan, K. and Mahamood, S. and Majumder, B. P. and Martins, P. H. and McMillan-Major, A. and Mille, S. and van Miltenburg, E. and Nadeem, M. and Narayan, S. and Nikolaev, V. and Niyongabo Rubungo, A. and Osei, S. and Parikh, A. and Perez-Beltrachini, L. and Rao, N. R. and Raunak, V. and Rodriguez, J. D. and Santhanam, S. and Sedoc, J. and Sellam, T. and Shaikh, S. and Shimorina, A. and Sobrevilla Cabezudo, M. .A and Strobelt, H. and Subramani, N. and Xu, W. and Yang, D. and Yerukola, A. and Zhou, J.},
   title     = {The {GEM} Benchmark: Natural Language Generation, its Evaluation and Metrics},
@@ -20619,6 +20705,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://monoskop.org/images/3/38/Hawkes_Terence_Structuralism_and_Semiotics_2003.pdf},
 }
 
+@Article{Hayward2023,
+  author    = {Hayward, B. A.},
+  title     = {Nurses are background actors in medical reality television: A character network analysis and call for authentic action},
+  journal   = {Journal of Advanced Nursing},
+  year      = {2023},
+  volume    = {in press},
+  doi       = {10.1111/jan.15583},
+  owner     = {Vincent},
+  timestamp = {2023.02.15},
+}
+
 @Book{Hazen2004,
   title     = {Renaissance: Everyday Life},
   publisher = {Good Year Books},
@@ -22271,6 +22368,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.tifs.2019.01.011},
   owner     = {Vincent},
   timestamp = {2022.06.26},
+}
+
+@InProceedings{Hu2020a,
+  author        = {Hu, W. and Fey, M. and Zitnik, M. and Dong, Y. and Ren, H. and Liu, B. and Catasta, M. and Leskovec, J.},
+  title         = {Open Graph Benchmark: Datasets for Machine Learning on Graphs},
+  booktitle     = {Advances in Neural Information Processing Systems},
+  year          = {2020},
+  __markedentry = {[Vincent:]},
+  groups        = {Datasets},
+  owner         = {Vincent},
+  review        = {arXiv: https://arxiv.org/abs/2005.00687},
+  timestamp     = {2020.05.09},
+  url           = {https://proceedings.neurips.cc/paper/2020/hash/fb60d411a5c5b72b2e7d3527cfc84fd0-Abstract.html},
 }
 
 @InProceedings{Huang2009,
@@ -27053,6 +27163,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.05.10},
 }
 
+@InCollection{Kumar2022i,
+  author    = {Kumar, S. and Verma, T.},
+  title     = {Investigating the Character-Network Topology in {Marvel} Movies},
+  booktitle = {Encyclopedia of Data Science and Machine Learning},
+  publisher = {IGI Global},
+  year      = {2022},
+  chapter   = {151},
+  pages     = {2514-2527},
+  doi       = {10.4018/978-1-7998-9220-5.ch151},
+  owner     = {Vincent},
+  timestamp = {2023.01.26},
+}
+
 @InProceedings{Kumaran2016,
   author    = {Kumaran, P. and Chitrakala, S.},
   title     = {Community formation based influence node selection for information diffusion in online social network},
@@ -27096,6 +27219,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1137/1.9781611972801.49},
   owner     = {Vincent},
   timestamp = {2014.11.05},
+}
+
+@InProceedings{Kunegis2013a,
+  author    = {Kunegis, J.},
+  title     = {KONECT: The Koblenz Network Collection},
+  booktitle = {International Conference on World Wide Web},
+  year      = {2013},
+  pages     = {1343-1350},
+  doi       = {10.1145/2487788.2488173},
+  owner     = {Vincent},
+  timestamp = {2016.11.01},
 }
 
 @Electronic{Kunegis2019,
@@ -28669,6 +28803,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2015.07.05},
 }
 
+@Article{Leskovec2016,
+  author    = {Leskovec, J. and Sosič, R.},
+  title     = {{SNAP}: A General-Purpose Network Analysis and Graph-Mining Library},
+  journal   = {ACM Transactions on Intelligent Systems and Technology},
+  year      = {2016},
+  volume    = {8},
+  number    = {1},
+  pages     = {1},
+  doi       = {10.1145/2898361},
+  owner     = {Vincent},
+  timestamp = {2023.02.25},
+}
+
 @MastersThesis{Lesser2014,
   author      = {Lesser, Josh},
   title       = {Get yourself connected: time, space, and character networks in David Mitchell's fiction},
@@ -30210,6 +30357,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.11.26},
   url       = {https://arxiv.org/abs/2210.15332},
+}
+
+@InProceedings{Liu2023a,
+  author    = {Liu, C. and Shmilovici, A. and Last, M.},
+  title     = {{MND}: A New Dataset and Benchmark of Movie Scenes Classified by Their Narrative Function},
+  booktitle = {European Conference on Computer Vision},
+  year      = {2023},
+  volume    = {13804},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {610-626},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-031-25069-9_39},
+  owner     = {Vincent},
+  timestamp = {2023.02.18},
 }
 
 @Book{Livingstone2013,
@@ -34792,6 +34953,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@InProceedings{Morris2020,
+  author    = {Morris, C. and Kriege, N. M. and Bause, F. and Kersting, K. and Mutzel, P. and Neumann, M.},
+  title     = {{TUDataset}: A Collection of Benchmark Datasets for Learning with Graphs},
+  booktitle = {ICML Workshop on Graph Representation Learning and Beyond},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2023.02.25},
+  url       = {https://arxiv.org/abs/2007.08663},
+}
+
 @Book{Morselli2008,
   title     = {Inside Criminal Networks},
   publisher = {Springer},
@@ -35287,6 +35458,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.09.22},
   url       = {https://openjournals.library.sydney.edu.au/index.php/SSE/article/view/4742},
+}
+
+@Article{Murphy2023,
+  author    = {Murphy, T. P. and Zheng, N. S.},
+  title     = {Character Networks, the Zero Function, and the Lost Character: Solving Three Anomalies in Plot Genotype Theory},
+  journal   = {Narrative},
+  year      = {2023},
+  volume    = {31},
+  number    = {1},
+  pages     = {49-68},
+  owner     = {Vincent},
+  timestamp = {2023.01.14},
+  url       = {https://muse.jhu.edu/article/875756},
 }
 
 @InProceedings{Murr2017,
@@ -38305,6 +38489,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://dl.acm.org/citation.cfm?id=2888122},
 }
 
+@Electronic{Peixoto2020c,
+  author       = {Peixoto, T. P.},
+  year         = {2020},
+  title        = {The Netzschleuder Network Catalogue and Repository},
+  organization = {graph-tool},
+  url          = {https://networks.skewed.de/},
+  owner        = {Vincent},
+  timestamp    = {2023.02.25},
+}
+
 @Article{Pelossof2010,
   author    = {Pelossof, R. and Ying, Z.},
   title     = {The Attentive Perceptron},
@@ -39237,6 +39431,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.20368/1971-8829/1135035},
   owner     = {Vincent},
   timestamp = {2021.09.23},
+}
+
+@Article{Polya2023,
+  author    = {Pólya, T. and Csertő, I.},
+  title     = {Emotion Recognition Based on the Structure of Narratives},
+  journal   = {Electronics},
+  year      = {2023},
+  volume    = {12},
+  number    = {4},
+  pages     = {919},
+  doi       = {10.3390/electronics12040919},
+  owner     = {Vincent},
+  timestamp = {2023.02.14},
 }
 
 @InProceedings{Ponnambalam2016,
@@ -42041,6 +42248,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-981-13-0242-8_26-1},
   owner     = {Vincent},
   timestamp = {2022.06.29},
+}
+
+@InProceedings{Rossi2014a,
+  author    = {Rossi, R. A. and Ahmed, N. K.},
+  title     = {The Network Data Repository with Interactive Graph Analytics and Visualization},
+  booktitle = {29th AAAI Conference on Artificial Intelligence},
+  year      = {2015},
+  pages     = {4292-4293},
+  owner     = {Vincent},
+  review    = {old title: NetworkRepository: A Graph Data Repository with Visual Interactive Analytics
+arXiv: http://arxiv.org/abs/1410.3560},
+  timestamp = {2014.10.19},
+  url       = {https://www.aaai.org/ocs/index.php/AAAI/AAAI15/paper/viewPaper/9553},
 }
 
 @Article{Rossi2020,
@@ -45180,14 +45400,13 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Siljak2021,
   author    = {Šiljak, H.},
-  title     = {Networks of Twin Peaks: the Dale Cooper Effect},
-  journal   = {arXiv},
-  year      = {2021},
-  volume    = {cs.SI},
-  pages     = {2108.09516},
+  title     = {Networks of {Twin Peaks}: the {Dale Cooper} Effect},
+  journal   = {Mathematical Intelligencer},
+  year      = {2022},
+  volume    = {in press},
+  doi       = {10.1007/s00283-022-10187-w},
   owner     = {Vincent},
   timestamp = {2021.08.28},
-  url       = {https://arxiv.org/abs/2108.09516},
 }
 
 @Article{Silva2011,
@@ -46292,6 +46511,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1162/coli_a_00347},
   owner     = {Vincent},
   timestamp = {2023.01.09},
+}
+
+@InProceedings{Srinivasan2021,
+  author    = {Srinivasan, B. and Zheng, D. and Karypis, G.},
+  title     = {Learning over Families of Sets - Hypergraph Representation Learning for Higher Order Tasks},
+  booktitle = {SIAM International Conference on Data Mining},
+  year      = {2021},
+  pages     = {756-764},
+  doi       = {10.1137/1.9781611976700.85},
+  owner     = {Vincent},
+  timestamp = {2023.02.25},
 }
 
 @Article{Srinivasan2022,
@@ -48768,6 +48998,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.01.02},
   url       = {https://www.cs.nmt.edu/~rbasnet/research/ClusteringSimilarityAndItsApplications.pdf},
+}
+
+@Article{Torres2021,
+  author    = {Torres, L. and Blevins, A. S. and Bassett, D. and Eliassi-Rad, T.},
+  title     = {The Why, How, and When of Representations for Complex Systems},
+  journal   = {SIAM Review},
+  year      = {2021},
+  volume    = {63},
+  number    = {3},
+  pages     = {435-485},
+  doi       = {10.1137/20m1355896},
+  owner     = {Vincent},
+  timestamp = {2023.02.25},
 }
 
 @InProceedings{Toshniwal2020,
